# autowall

./: README.md  autowall  autowall-unspalsh  autowall.py  i3autowall  i3autowall.sh  install.sh  pyproject.toml  tags
src/: main.py
