[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autowall"
version = "0.0.1"
authors = [
  { name="Began Bajrami", email="beganbajrami@gmail.com" },
]
description = "CLI tool for automatically download and manage wallpapers"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/begbaj/autowall"
"Bug Tracker" = "https://github.com/begbaj/autowall/issues"

[tool]

[tool.hatch.envs.default]
dependencies = [
    "requests"
]

[tool.hatch.build.targets.prod]


